argocd/http_route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-route
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.atayi.net
      secretName: argocd-tls
  rules:
    - host: argocd.atayi.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
